--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "plotly.js": "^2.25.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "6.14.2",
     "semantic-ui-css": "2.5.0",
     "semantic-ui-react": "2.1.4"
